# vtquery

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .npmignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  binding.gyp  common.gypi  mapbox-maps-test.mvt  mason-versions.ini  package-lock.json  package.json  tilequery_v2-tile.pbf
bench/: rules.js  vtquery.bench.js
cloudformation/: ci.template  travis.template
lib/: index.js
lib/binding/: vtquery.node
scripts/: clang-tidy.sh  coverage.sh  generate_compile_commands.py  install_deps.sh  sanitize.sh  setup.sh
src/: geometry_processors.hpp  module.cpp  reproject.hpp  util.hpp  vector_tile_util.hpp  vtquery.cpp  vtquery.hpp
test/: vtquery.test.js
test/fixtures/: canada-covered-square.mvt  expected-order.json  expected-sf.json  linestrings-16-10498-22872.mvt  linestrings-properties-16-10498-22872.mvt  manila-buildings-16-54789-30080.mvt  manila-roads-terrain-14-13698-7519.mvt  points-16-10498-22872.mvt  points-properties-16-10498-22872.mvt  polygons-16-10498-22872.mvt  polygons-properties-16-10498-22872.mvt  sf-15-5240-12665.mvt  sf-15-5240-12666.mvt  sf-15-5240-12667.mvt
tmp/: Dockerfile
viz/: app.js  package-lock.json  package.json
viz/views/: index.html
vtquery/: geometry_processors.hpp  main.cpp  reproject.hpp
